# dd2476-podcast-search

./: .editorconfig  .gitignore  README.md  clean.sh  docker-compose.yml  workspace.code-workspace
Backend/: pom.xml
analysis/: extract_samples.py  models.py  pyproject.toml
backend/: HELP.md  README.md  build.gradle  run.sh  settings.gradle
backend/client/: README.md  package-lock.json  package.json
backend/client/public/: index.html
backend/client/src/: App.js  mockdata.js  (+1 more)
client/: HELP.md  craco.config.js  package-lock.json  package.json  tailwind.config.js
client/public/: index.html
client/src/: App.js  App.tsx  index.css
data/: README.md  metadata_samples.tsv  trac_test_evaluation_2020.txt
evaluation/: nDCG.py
explorer/: index.py  main.py  pyproject.toml
preprocess/: README.md  preprocess.sh  pyproject.toml
preprocess/crawler/: shows.py
preprocess/notebooks/: data-analysis-report.ipynb  data-verification.ipynb  episode_duration.csv  episode_words_map_0.csv  episode_words_map_1.csv  episode_words_map_10.csv  episode_words_map_11.csv  episode_words_map_12.csv  episode_words_map_13.csv  episode_words_map_14.csv  episode_words_map_15.csv  episode_words_map_2.csv  episode_words_map_3.csv  episode_words_map_4.csv  episode_words_map_5.csv  episode_words_map_6.csv  episode_words_map_7.csv  episode_words_map_8.csv  episode_words_map_9.csv  metadata-analysis.ipynb  show_episodes_count.csv  transcript-analysis.ipynb
preprocess/preprocess/: README.md  extract_transcript.py  index.py  logger.py  metadata.py  models.py
scripts/: create_database.sql
(+141 files in other folders)
