[tool.poetry]
name = "explorer"
version = "0.1.0"
description = "A simple data explorer for Podcast Search Engine"
authors = ["erikdao <cuong@neuraltalks.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
peewee = "^3.14.4"
psycopg2 = "^2.8.6"
tqdm = "^4.59.0"
python-dotenv = "^0.15.0"
tornado = "^6.1"
tornado-psycopg2 = "^0.3.1"
elasticsearch = ">=7.0.0,<8.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
black = "^20.8b1"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
